--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <a href="./index.html">Main Page       </a>
   <a href="./Gallery.html">Photo Gallery</a>
   <br>
-  <iframe src="p5/addon_embedded.html" width=800 height=530></iframe>
+  <textarea rows="10" cols="100" readonly>
+  </textarea>
   <p>Click the canvas to start drawing. once you pick your finger up off the mouse, your turn is over, and the other person draws their line.</p>
 </body>
 </html>
