--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <a href="./index.html">Main Page       </a>
   <a href="./Gallery.html">Photo Gallery</a>
   <br>
-  <textarea rows="10" cols="100">
+  <textarea rows="10" cols="50">
   </textarea>
-  <p>Click the canvas to start drawing. once you pick your finger up off the mouse, your turn is over, and the other person draws their line.</p>
+  <p>The game will not start until the first player has entered their first turn</p>
 </body>
 </html>
