--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<meta name="veiwport" content="width=device-width, initial-scale=1">
 <title>Add-on</title>
   <h1>The Add-On Web Game</h1>
 </head>
