--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
   <a href="./index.html">Main Page       </a>
   <a href="./Gallery.html">Photo Gallery</a>
   <br>
-  <textarea rows="1" cols="50" autofocus>
+  <textarea name="game" rows="25" cols="50" readonly>
+  </textarea>
+  <textarea name="turn" rows="1" cols="50">
   </textarea>
   <p>The game will not start until the first player has entered their first turn</p>
 </body>
