--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,9 @@
   <a href="./index.html">Main Page       </a>
   <a href="./Gallery.html">Photo Gallery</a>
   <br>
-  <textarea name="game" rows="10" cols="50" readonly>
-  </textarea>
+  <textarea name="game" rows="10" cols="50" readonly></textarea>
   <br>
-  <textarea name="turn" rows="1" cols="50">
-  </textarea>
+  <textarea name="turn" rows="1" cols="50"></textarea>
   <p>The game will not start until the first player has entered their first turn</p>
 </body>
 </html>
