--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <br>
   <textarea id="game" rows="10" cols="50" readonly></textarea>
   <br>
-  <textarea id="turn" rows="1" cols="50"></textarea>
-  <p>The game will not start until the first player has entered their first turn</p>
+  <input type="text" id="turn" rows="1" cols="50" disabled>
+  <p id="instructions">The game will not start until the first player has entered their first turn</p>
 </body>
 </html>
