--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <a href="./index.html">Main Page       </a>
   <a href="./Gallery.html">Photo Gallery</a>
   <br>
-  <textarea id="game" rows="10" cols="50" readonly></textarea>
+  <textarea id="game" rows="10" cols="50" readonly>Test</textarea>
   <br>
   <input type="text" id="turn" rows="1" cols="50" disabled>
   <p id="instructions">The game will not start until the first player has entered their first turn</p>
