--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <h1>The Add-On Web Game</h1>
-  <a href="./index.html">Main Page       </a>
+  <a href="./index.html">Main Page </a>
   <a href="./Gallery.html">Photo Gallery</a>
   <br>
   <textarea id="game" rows="10" cols="50" readonly></textarea>
   <br>
-  <input type="text" id="turn" disabled>
+  <input type="text" id="turn" size="50" disabled>
   <p id="instructions">The game will not start until the first player has entered their first turn</p>
 </body>
