--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <noscript>Yeah you definitely need javascript to run this</noscript>
 <title>Add-on</title>
 </head>
-<body>
+<body background="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjijNe9_-jhAhWMjlkKHfjgDHcQjRx6BAgBEAU&url=https%3A%2F%2Fexperiments.withgoogle.com%2Faesthetic&psig=AOvVaw2Vj2nmotrATWA958vyzsTR&ust=1556204447326836">
   <h1>The Add-On Web Game</h1>
   <a href="./index.html">Main Page </a>
   <a href="./Gallery.html">Photo Gallery</a>
