--- a/public/Gallery.html
+++ b/public/Gallery.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <h1>Photo Gallery</h1>
-    <br>
-    <a href="./index.html">Main Page</a>
-    <a href="./Gallery.html">Photo Gallery</a>
-    <br>
-    <p>This is where you can see previous games other users have played</p>
-  </body>
+<head>
+	<link rel="stylesheet" href="index.css">
+</head>
+<body>
+	<h1>Story Gallery</h1>
+	<br>
+	<p>This is where you can see previous games other users have played</p>
+</body>
 </html>
