--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <!--suppress HtmlFormInputWithoutLabel -->
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="libraries/socket.io.slim.js"></script>
-<script src="addon.js"></script>
-<noscript>Yeah you definitely need javascript to run this</noscript>
-<title>Add-on</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="libraries/socket.io.slim.js"></script>
+	<script src="addon.js"></script>
+	<link rel="stylesheet" href="index.css">
+	<noscript>Yeah you definitely need javascript to run this</noscript>
+	<title>Add-on</title>
 </head>
-<body background="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjijNe9_-jhAhWMjlkKHfjgDHcQjRx6BAgBEAU&url=https%3A%2F%2Fexperiments.withgoogle.com%2Faesthetic&psig=AOvVaw2Vj2nmotrATWA958vyzsTR&ust=1556204447326836">
-  <h1>The Add-On Web Game</h1>
-  <a href="./index.html">Main Page </a>
-  <a href="./Gallery.html">Photo Gallery</a>
-  <br>
-  <textarea id="game" rows="10" cols="50" readonly></textarea>
-  <br>
-  <input type="text" id="turn" size="50" disabled>
-  <p id="instructions">The game will not start until the first player has entered their first turn</p>
+<body>
+	<h1>The Add-On Web Game</h1>
+	<div class="links">
+		<a href="gallery.html" target="_blank">Story Gallery</a>
+	</div>
+	<br>
+	<textarea id="game" rows="10" cols="50" readonly></textarea>
+	<br>
+	<input type="text" id="turn" size="50" disabled>
+	<br>
+	<p id="instructions">The game will not start until the first player has entered their first turn</p>
+	<button id="leave" width="50" disabled>Leave Game</button>
 </body>
