new page, added end game

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<!--suppress HtmlFormInputWithoutLabel -->
+<html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="libraries/socket.io.slim.js"></script>
-	<script src="addon.js"></script>
-	<link rel="stylesheet" href="index.css">
-	<noscript>Yeah you definitely need javascript to run this</noscript>
-	<title>Add-on</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>The Add-On Web Game</h1>
+	<h1>Welcome</h1>
 	<div class="links">
-		<a href="gallery.html" target="_blank">Story Gallery</a>
+		<a href="game.html">Game</a>
+		<br><br>
+		<a href="gallery.html">Story Gallery</a>
 	</div>
-	<br>
-	<textarea id="game" rows="10" cols="50" readonly></textarea>
-	<br>
-	<input type="text" id="turn" size="50" disabled>
-	<br>
-	<p id="instructions">The game will not start until the first player has entered their first turn</p>
-	<button id="leave" width="50" disabled>Leave Game</button>
 </body>
+</html>
