--- a/public/game.html
+++ b/public/game.html
@@ -14,6 +14,7 @@
 	<br>
 	<input type="text" id="turn" size="50" disabled>
 	<br>
-	<p id="instructions">The game will not start until the first player has entered their first turn</p>
+	<p id="instructions">The game will not start until the first player has entered their first turn</p><br>
+	<p id="players"></p>
 	<button id="leave" width="50" onclick="leaveGame()" disabled>End Game</button>
 </body>
