Text box size, cookie exp, alert

--- a/public/game.html
+++ b/public/game.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 	<h1>The Add-On Web Game</h1>
-	<textarea id="game" rows="10" cols="50" readonly></textarea>
+	<textarea id="game" rows="10" readonly></textarea>
 	<br>
-	<input type="text" id="turn" size="50" disabled>
+	<input type="text" id="turn" disabled>
 	<br>
-	<p id="instructions">The game will not start until the first player has entered their first turn</p><br>
-	<p id="players"></p>
-	<button id="leave" width="50" onclick="leaveGame()" disabled>End Game</button>
+	<p id="instructions">The game will not start until the first player has entered their first turn</p>
+	<br>
+	<button id="leave" onclick="leaveGame()" disabled>End Game</button>
 </body>
