--- a/public/Gallery.html
+++ b/public/Gallery.html
@@ -8,4 +8,6 @@
 	<br>
 	<p>This is where you can see previous games other users have played</p>
 </body>
+<table style width="100%">
+</table>
 </html>
