--- a/public/Gallery.html
+++ b/public/Gallery.html
@@ -9,8 +9,8 @@
 	<p>This is where you can see previous games other users have played</p>
 </body>
 <table style width="100%">
-	<tr>"Poop"
-		<td>"Fuck"
+	<tr>
+		<td>Fuck
 		</td>
 	</tr>
 </table>
