--- a/public/gallery.html
+++ b/public/gallery.html
@@ -8,4 +8,10 @@
 	<br>
 	<p>This is where you can see previous games other users have played</p>
 </body>
+	<table style width="100%">
+	<tr>
+		<td>Fuck
+		</td>
+	</tr>
+</table>
 </html>
