--- a/public/gallery.html
+++ b/public/gallery.html
@@ -10,11 +10,11 @@
 </body>
 	<table style width="50%">
 	<tr>
-		<td>Fuck
+		<td>Time
 		</td>
-		<td>my
+		<td>Word Count
 		</td>
-		<td>ass
+		<td>title
 		</td>
 		
 	</tr>
