--- a/public/gallery.html
+++ b/public/gallery.html
@@ -10,12 +10,12 @@
 </body>
 	<table style width="80%">
 	<tr>
-		<td>Time
-		</td>
-		<td>Word Count
-		</td>
-		<td>title
-		</td>
+		<th>Time
+		</th>
+		<th>Word Count
+		</th>
+		<th>title
+		</th>
 		
 	</tr>
 		<tr>
