--- a/public/gallery.html
+++ b/public/gallery.html
@@ -6,6 +6,9 @@
 <body>
 	<h1>Story Gallery</h1>
 	<br>
+	<div class="links">
+		<a href="http://storyaddon.herokuapp.com/">Main Page</a>
+	</div>
 	<p>This is where you can see previous games other users have played</p>
 </body>
 	<table style width="80%">
