--- a/public/gallery.html
+++ b/public/gallery.html
@@ -11,7 +11,7 @@
 	</div>
 	<p>This is where you can see previous games other users have played</p>
 </body>
-	<table style width="80%">
+	<table>
 	<tr>
 		<th>Time
 		</th>
