updated for use

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -10,52 +10,16 @@
 		<a href="http://storyaddon.herokuapp.com/">Main Page</a>
 	</div>
 	<p>This is where you can see previous games other users have played</p>
-</body>
 	<table>
 	<tr>
 		<th>Time
 		</th>
 		<th>Word Count
 		</th>
-		<th>title
+		<th>Title
 		</th>
 		
 	</tr>
-		<tr>
-		<td>Fuck
-		</td>
-		<td>my
-		</td>
-		<td>ass
-		</td>
-		
-	</tr>
-		<tr>
-		<td>Fuck
-		</td>
-		<td>my
-		</td>
-		<td>ass
-		</td>
-		
-	</tr>
-		<tr>
-		<td>Fuck
-		</td>
-		<td>my
-		</td>
-		<td>ass
-		</td>
-		
-	</tr>
-		<tr>
-		<td>Fuck
-		</td>
-		<td>my
-		</td>
-		<td>ass
-		</td>
-		
-	</tr>
-</table>
+	</table>
+</body>
 </html>
