--- a/public/game.html
+++ b/public/game.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!--suppress HtmlFormInputWithoutLabel -->
+<html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="libraries/socket.io.slim.js"></script>
@@ -18,3 +19,4 @@
 	<br>
 	<button id="leave" onclick="leaveGame()" disabled>End Game</button>
 </body>
+</html>
