Added gallery functions

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<link rel="stylesheet" href="style.css">
+	<script src="gallery.js"></script>
+	<title>Add-on Gallery</title>
 </head>
 <body>
 	<h1>Story Gallery</h1>
