--- a/public/game.html
+++ b/public/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--suppress HtmlFormInputWithoutLabel -->
-<html>
+<html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="libraries/socket.io.slim.js"></script>
