--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<link rel="stylesheet" href="style.css">
+    <title>Add-on Welcome</title>
 </head>
 <body>
 	<h1>Welcome</h1>
