--- a/public/gallery.html
+++ b/public/gallery.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="style.css">
+    <script src="libraries/socket.io.slim.js"></script>
 	<script src="gallery.js"></script>
 	<title>Add-on Gallery</title>
 </head>
