Added viewer capabilities

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -10,7 +10,7 @@
 	<h1>Story Gallery</h1>
 	<br>
 	<div class="links">
-		<a href="http://storyaddon.herokuapp.com/">Main Page</a>
+		<a href="index.html">Main Page</a>
 	</div>
 	<p>This is where you can see previous games other users have played</p>
 	<table id="stories">
