--- a/public/view.html
+++ b/public/view.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<!--suppress HtmlFormInputWithoutLabel -->
+<html lang="en">
 <head>
 	<link rel="stylesheet" href="style.css">
+	<title>Add-on story</title>
 </head>
 <body>
-	<h1>Title</h1>
-	<br>
-	<p>Date:</p>
-	<p>Word Count:</p>
-	<p>Title:</p>
+	<h1 id="title">Add-on story</h1>
+	<div id="story-info">
+		<p id="date">Created: ...</p>
+		<p id="word-count">#Words: ...</p>
+	</div>
 	<br>
 	<textarea id="display" rows="10" readonly></textarea>
 </body>
