fixed hierarchy and libraries

--- a/public/view.html
+++ b/public/view.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="style.css">
+	<script src="libraries/socket.io.slim.js"></script>
+	<script src="view.js"></script>
 	<title>Add-on story</title>
 </head>
 <body>
