wording in gallery.html

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -15,7 +15,7 @@
 	<p>This is where you can see previous games other users have played</p>
 	<table id="stories">
 		<tr>
-			<th>Time</th>
+			<th>Date & Time</th>
 			<th>Word Count</th>
 			<th>Title</th>
 		</tr>
