fixed jellyfish bug and autocaps off

--- a/public/game.html
+++ b/public/game.html
@@ -13,7 +13,7 @@
 	<h1>The Add-On Web Game</h1>
 	<textarea id="game" rows="10" readonly></textarea>
 	<br>
-	<input type="text" id="turn" disabled>
+	<input type="text" id="turn" autocapitalize="off" disabled>
 	<br>
 	<p id="instructions">The game will not start until the first player has entered their first turn</p>
 	<br>
